--- a/styless.css
+++ b/styless.css
@@ -5,7 +5,8 @@ margin: 0px;
 
 }
 header {
-    border-bottom: solid 2px white(114, 40, 100);
+    border-bottom: solid 2px rgb(114, 40, 100);
     padding: 20px;
     font-size: 32px;
+    color: rgb(42, 122, 228);
 }
