--- a/styless.css
+++ b/styless.css
@@ -1,26 +1,34 @@
-body{
-    color:blue;
-backgroundcolor:beige;
-margin: 0px;
-
-}
-header {
-    border-bottom: solid 2px rgb(114, 40, 100);
+body {
+    color: white;
+    background: black;
+    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
+  }
+  
+  header {
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
     color: rgb(42, 122, 228);
-}
-
-section {
+  }
+  
+  section {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
     justify-content: center;
-}
-
-.chamada-texto {
-    margin-right: 20px;
-}
-
-
+  }
+  
+  .chamada-texto {
+    margin-right: 5%;
+  }
+  
+  h1 {
+    font-size: 40px;
+  }
+  
+  p {
+    font-size: 20px;
+  }
+  
